--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             overflow: hidden;
             background-color: #000;
             color: white;
+            transition: background-color 0.5s, color 0.5s;
         }
         #video-container {
             width: 100%;
@@ -29,6 +30,7 @@
             justify-content: center;
             align-items: center;
             background: black;
+            transition: background-color 0.5s;
         }
         video {
             max-height: 100%;
@@ -50,12 +52,17 @@
             border-radius: 0 0 10px 10px;
             box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.5);
             overflow: hidden;
+            transition: background-color 0.5s, color 0.5s;
         }
         #subtitle-display {
             transition: opacity 0.3s ease, font-size 0.3s ease;
             line-height: 1.5;
             word-wrap: break-word;
             max-width: 90%;
+        }
+        .day-mode {
+            background-color: white !important;
+            color: black !important;
         }
         #upload-container {
             display: flex;
@@ -81,6 +88,28 @@
         button:hover {
             background-color: #1558b0;
         }
+        #theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            width: 50px;
+            height: 50px;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            cursor: pointer;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: background-color 0.5s, color 0.5s;
+        }
+        #theme-toggle.day-mode {
+            background: rgba(255, 255, 255, 0.7);
+            color: black;
+        }
     </style>
 </head>
 <body>
@@ -97,6 +126,7 @@
     <div id="subtitle-container" class="hidden">
         <div id="subtitle-display"></div>
     </div>
+    <button id="theme-toggle" onclick="toggleTheme()">🌙</button>
 
     <script>
         let subtitles = [];
@@ -105,7 +135,10 @@
         const videoContainer = document.getElementById('video-container');
         const subtitleContainer = document.getElementById('subtitle-container');
         const uploadContainer = document.getElementById('upload-container');
+        const themeToggle = document.getElementById('theme-toggle');
         let lastSubtitle = null;
+
+        let isDayMode = false;
 
         document.getElementById('video-upload').addEventListener('change', (event) => {
             const videoFile = event.target.files[0];
@@ -188,17 +221,18 @@
 
                 if (subtitle && subtitle !== lastSubtitle) {
                     lastSubtitle = subtitle;
-                    videoElement.pause(); // Pausa el video cuando aparece un nuevo subtítulo
-                    const lines = calculateEffectiveLines(subtitle.text); // Calcula líneas efectivas
+                    videoElement.pause();
+                    const lines = calculateEffectiveLines(subtitle.text);
                     adjustSubtitleSize(lines);
-                    subtitleDisplay.innerHTML = subtitle.text.replace(/\n/g, '<br>');
+
+                    const formattedSubtitle = formatSubtitle(subtitle.text);
+                    subtitleDisplay.innerHTML = formattedSubtitle;
                     subtitleDisplay.style.opacity = '1';
                 } else if (!subtitle) {
                     subtitleDisplay.style.opacity = '0';
                 }
             };
 
-            // Reanudar video al hacer clic en cualquier lugar
             document.body.addEventListener('click', () => {
                 if (videoElement.paused) {
                     videoElement.play();
@@ -212,7 +246,7 @@
 
             lines.forEach((line) => {
                 const lineLength = line.length;
-                effectiveLines += Math.ceil(lineLength / 40); // Cada 40 caracteres cuentan como una línea
+                effectiveLines += Math.ceil(lineLength / 40);
             });
 
             return effectiveLines;
@@ -232,16 +266,35 @@
             }
         }
 
+        function formatSubtitle(text) {
+            const lines = text.split('\n');
+            if (lines.length > 0) {
+                lines[0] = `<strong>${lines[0]}</strong>`;
+            }
+            return lines.join('<br>');
+        }
+
         function enterFullScreen(element) {
             if (element.requestFullscreen) {
                 element.requestFullscreen();
-            } else if (element.mozRequestFullScreen) { // Firefox
+            } else if (element.mozRequestFullScreen) {
                 element.mozRequestFullScreen();
-            } else if (element.webkitRequestFullscreen) { // Chrome, Safari y Opera
+            } else if (element.webkitRequestFullscreen) {
                 element.webkitRequestFullscreen();
-            } else if (element.msRequestFullscreen) { // IE/Edge
+            } else if (element.msRequestFullscreen) {
                 element.msRequestFullscreen();
             }
+        }
+
+        function toggleTheme() {
+            isDayMode = !isDayMode;
+
+            document.body.classList.toggle('day-mode', isDayMode);
+            videoContainer.classList.toggle('day-mode', isDayMode);
+            subtitleContainer.classList.toggle('day-mode', isDayMode);
+            themeToggle.classList.toggle('day-mode', isDayMode);
+
+            themeToggle.innerHTML = isDayMode ? '🌙' : '☀️';
         }
     </script>
 </body>
